--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
-*{
-    font-size: 16px;
+@import "homepage.css";
+@import "colors.css";
+
+* {
+  font-size: 16px;
 }
 
-
-
+body {
+  margin: 0;
+}
