Change nav items to links

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -25,4 +25,10 @@
   background-color: var(--main-background-two);
   margin: 5px 0;
   padding: var(--large-padding);
+  display: flex;
+  justify-content: center;
+}
+
+.nav-item:hover {
+  text-decoration: underline;
 }
