--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,14 @@
 
 * {
   font-size: 16px;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
+}
+
+body h1 {
+  font-size: 2em;
 }
