--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,18 @@
   box-sizing: border-box;
 }
 
+h1 {
+  font-size: 2.5em;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
