--- a/css/homepage.css
+++ b/css/homepage.css
@@ -8,7 +8,6 @@
   grid-template-areas:
     "header"
     "nav"
-    "sd"
     "main"
     "ft";
   margin: 0;
@@ -56,6 +55,38 @@ header {
 
 .nav-list li {
   list-style: none;
+}
+
+.content {
+  grid-area: main;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.card {
+  width: 80%;
+  background-color: var(--main-background-two);
+  border-radius: 4px;
+  min-height: 200px;
+  margin: 30px 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.inner-card {
+  margin: 10px 0 10px 10px;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  width: 50%;
+  padding: 10px;
+}
+
+.left-card {
+  border-left: 2px solid white;
+  width: 50%;
+  padding: 10px;
 }
 
 @media only screen and (min-width: 798px) {
