--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import "homepage.css";
 @import "colors.css";
 @import "blogpage.css";
+@import "contact.css";
+@import "about.css";
 
 * {
   font-size: 16px;
