--- a/css/blogpage.css
+++ b/css/blogpage.css
@@ -6,9 +6,37 @@ content {
   justify-content: center;
 }
 
+.post-container {
+  margin-bottom: 60px;
+}
+
 figcaption {
   text-align: center;
   font-weight: bold;
+}
+
+.author-box {
+  margin: 10px auto;
+}
+
+.author-bio {
+  background-color: var(--main-background-two);
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 4px;
+  padding: 10px;
+}
+
+.author-img {
+  width: 110px;
+  border-radius: 50%;
+  padding: 10px;
+  height: 100px;
+}
+
+.author-left {
+  margin-left: 50px;
+  padding: 10px;
 }
 
 .post-top {
@@ -55,3 +83,15 @@ figcaption {
 .first-para::first-letter {
   font-size: 1.5em;
 }
+
+@media screen and (min-width: 798px) {
+  .author-box {
+    display: flex;
+    width: 80%;
+    justify-content: flex-start;
+  }
+
+  .author-bio {
+    width: 50%;
+  }
+} ;
