--- a/css/blogpage.css
+++ b/css/blogpage.css
@@ -84,6 +84,23 @@ figcaption {
   font-size: 1.5em;
 }
 
+.linkedIn-share {
+  background-color: #0b65c2;
+  padding: 4px;
+  border-radius: 4px;
+}
+
+.share-button {
+  color: var(--main-background-one);
+  text-decoration: none;
+}
+
+.share-button:hover {
+  cursor: pointer;
+  color: var(--main-background-two);
+  filter: brightness(0.8);
+}
+
 @media screen and (min-width: 798px) {
   .author-box {
     display: flex;
