--- a/css/blogpage.css
+++ b/css/blogpage.css
@@ -88,6 +88,7 @@ figcaption {
   background-color: #0b65c2;
   padding: 4px;
   border-radius: 4px;
+  margin-right: 10px;
 }
 
 .share-button {
@@ -99,6 +100,10 @@ figcaption {
   cursor: pointer;
   color: var(--main-background-two);
   filter: brightness(0.8);
+}
+
+.shares {
+  display: flex;
 }
 
 @media screen and (min-width: 798px) {
