--- a/css/homepage.css
+++ b/css/homepage.css
@@ -35,6 +35,8 @@
   color: var(--main-text-color);
   padding: 20px;
   border: 4px double var(--main-background-one);
+  width: 90%;
+  text-align: center;
 }
 
 .card-title:hover {
@@ -46,6 +48,8 @@
 
 .card-link {
   text-decoration: none;
+  display: flex;
+  justify-content: center;
 }
 
 .right-card {
@@ -93,7 +97,7 @@
 
 .mini-card-img {
   width: 80%;
-  max-height: 300px;
+  max-height: 200px;
   object-fit: cover;
 }
 
@@ -142,6 +146,10 @@
 
   .mini-card {
     width: 40%;
+  }
+
+  .mini-card-img {
+    max-height: 300px;
   }
 
   .category {
